--- a/Styles.css
+++ b/Styles.css
@@ -36,7 +36,7 @@ img.logo {
 
 img.logo.homepage {
     position: relative;
-    left: 40%;
+    left: 34%;
 }
 
 img.logo.other {
@@ -62,7 +62,6 @@ ul.nav {
 
 div.nav {
     float: left;
-    border-right: 1px solid #ece8e1;
     position: relative;
 }
 
@@ -145,5 +144,23 @@ div:hover div.DropdownMenu {
 }
 ::-webkit-scrollbar-thumb:hover {
     background-color: lightgray;
+}
+/*End*/
+
+/*Patch Notes */
+div.Patch_Notes button {
+    position: relative;
+    background-color: #000000;
+    color: #ece8e1;
+    width: 100%;
+    height: 20%;
+    margin: 5px;
+    padding: 10px;
+}
+
+div.PN_Content {
+    position: relative;
+    display: none;
+    background-color: #fff;
 }
 /*End*/
