--- a/Styles.css
+++ b/Styles.css
@@ -4,11 +4,17 @@ header {
 
 body {
     text-align: center;
+    color: #000;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ece8e1;
     margin: 0;
     padding: 0;
     overflow: overlay;
+}
+.homebg {
+    background-size: cover;
+    padding-top: 50px;
+    padding-bottom: 25px;
 }
 
 /*Text Formats*/
@@ -89,8 +95,8 @@ div.items {
     float: left;
     text-align: center;
     position: relative;
-    padding-left: 50px;
-    left: 20%;
+    padding-left: 30px;
+    right: 1%;
 }
 
 
@@ -164,3 +170,9 @@ div.PN_Content {
     background-color: #fff;
 }
 /*End*/
+
+.Info_Title{
+    text-align: left;
+    padding-left: 20px;
+}
+
