--- a/Styles.css
+++ b/Styles.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: overlay;
+    margin-top: 20%;
 }
 .homebg {
     background-size: cover;
@@ -58,8 +59,16 @@ img.others {
 }
 
 /*Navigation Bar*/
+
+/*Makes Nav Always Visible*/
+nav {
+    position: fixed;
+    top: 0px;
+    z-index: 1;
+}
+
 ul.nav {
-    list-style-type: none;
+    list-style: none;
     margin: 0;
     padding: 0;
     background-color: #000000;
@@ -114,15 +123,15 @@ ul.listings.four div.map img {
 div.DropdownMenu {
 display: none;
 position: fixed;
-background-color: #ece8e1;
+background-color: green;
 min-width: 150px;
-z-index: 1;
+z-index: 2;
 }
 
 
 div.DropdownMenu a {
 color: black;
-padding: 14px 18px;
+padding: 14px 16px;
 display: block;
 }
   
@@ -159,15 +168,17 @@ div.Patch_Notes button {
     background-color: #000000;
     color: #ece8e1;
     width: 100%;
-    height: 20%;
-    margin: 5px;
+    margin-top: 10px;
     padding: 10px;
 }
 
 div.PN_Content {
-    position: relative;
     display: none;
-    background-color: #fff;
+    overflow: hidden;
+    background-color: grey;
+    margin-bottom: 5px;
+    text-align: justify;
+    padding: 10px;
 }
 /*End*/
 
@@ -176,3 +187,22 @@ div.PN_Content {
     padding-left: 20px;
 }
 
+/*Breadcrumbs Navigation*/
+.breadcrumbs {
+    background-color: gray; 
+    display: block;
+    overflow: hidden;
+    margin: 0px;
+    padding: 0px;
+    text-align: left;
+}
+
+.breadcrumbs p a {
+    text-decoration: none;
+    color: #ece8e1;
+}
+
+.breadcrumbs p a:hover {
+    color: #000070;
+}
+/*End*/
