added img.main for begginers guide

--- a/Styles.css
+++ b/Styles.css
@@ -58,6 +58,11 @@ img.others {
     height: 40%;
 }
 
+img.main {
+    position: center;
+    width: 600px;
+    height: 337.5px;
+}
 /*Navigation Bar*/
 
 /*Makes Nav Always Visible*/
