--- a/Styles.css
+++ b/Styles.css
@@ -8,11 +8,20 @@ header {
     text-align: left;
 }
 
+footer {
+    width: 100%;
+    height: 100px;
+    background-color: #000;
+    color: #ece8e1;
+    text-decoration: none;
+}
+
 
 body {
     text-align: center;
     color: #000;
     font-family: Valo, Arial, Helvetica, sans-serif;
+    font-size: 12px;
     background-color: #ece8e1;
     margin: 0;
     padding: 0;
@@ -28,18 +37,22 @@ body {
 
 /*Text Formats*/
 h1.titles {
-    font-weight: 1000;
-    font-size: 100%;    
+    font-weight: bold;
+    font-size: 20px;    
 }
 
 hr.titles {
-    width: 25%;
+    width: 150px;
     margin: 0 auto;
 }
 
 p {
     font-size: 15px;
     margin: 20px;
+}
+
+body p {
+    margin: 40px 20px 40px 20px;
 }
 /*End*/
 
@@ -58,6 +71,7 @@ img.logo.homepage {
 img.logo.other {
     position: relative;
     left: 5%;
+    margin: 0px 0px 20px 0px;
 }
 
 /*Thumbnails*/
@@ -115,21 +129,18 @@ div.nav a:hover {
 
 /*Listing Items or Images*/
 div.items {
-    float: left;
-    text-align: center;
-    position: relative;
     padding: 20px;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 
 /*Custom format for map display*/
 ul.listings.four div.map {
-    padding-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 ul.listings.four div.map img {
-    padding-left: 20px;
+    margin-left: 20px;
 }
 /*End*/
 
@@ -210,6 +221,10 @@ div.PN_Content {
     text-align: left;
 }
 
+.breadcrumbs p {
+    margin: 20px;
+}
+
 .breadcrumbs p a {
     text-decoration: none;
     color: #ece8e1;
@@ -258,4 +273,8 @@ img {
 
 div.Agents:hover a {
     color: #ff25ff;
+}
+
+div.Agents:hover {
+    box-shadow: 1px 1px 10px 1px gray;
 }
