--- a/Styles.css
+++ b/Styles.css
@@ -8,15 +8,6 @@ header {
     text-align: left;
 }
 
-footer {
-    width: 100%;
-    height: 100px;
-    background-color: #000;
-    color: #ece8e1;
-    text-decoration: none;
-    margin-top: 25px;
-}
-
 /* Offset Anchor Link Jumps */
 html {
     scroll-padding-top: 250px;
@@ -26,12 +17,16 @@ body {
     text-align: center;
     color: #000;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 1em;
     background-color: #ece8e1;
     margin: 0;
     padding: 0;
     overflow: overlay;
     margin-top: 200px;
+}
+
+a {
+    text-decoration: none;
 }
 
 .homebg {
@@ -41,10 +36,13 @@ body {
 }
 
 /*Text Formats*/
+h1, h2, h3, h4, h5 {
+    font-size: 2em;
+}
+
 .titles {
     font-family: Valo;
     font-weight: bold;
-    font-size: 20px;    
 }
 
 hr.titles {
@@ -53,7 +51,7 @@ hr.titles {
 }
 
 p {
-    font-size: 15px;
+    font-size: 1em;
     margin: 20px;
 }
 
@@ -125,7 +123,6 @@ div.nav a {
     width: 25px;
     color: #ece8e1;
     text-align: center;
-    text-decoration: none;
     font-size: 15px;
     min-width: 150px;
 }
@@ -134,6 +131,26 @@ div.nav a:hover {
     background-color: #000070;
 }
 /*End*/
+
+button.transfer {
+    background-color: gray;
+    border-radius: 15px;
+    width: 35%;
+    font-size: 15px;
+}
+
+button.transfer a {
+    color: #000;
+}
+
+
+button.transfer:hover {
+    background-color: red;
+}
+
+button.transfer:hover a{
+    color: white;
+}
 
 /*Listing Items or Images*/
 div.items {
@@ -149,12 +166,11 @@ div.mapBase {
 div.mapBase div.map {
     display: inline-block;
     width: 20%;
-    height: 5%;
-    margin-bottom: 20px;
+    height: 20%;
+    margin: 10px 10px 10px 15px;
 }
 
 div.mapBase div.map img {
-    margin-left: 20px;
     max-width: 100%;
     max-height: 100%;
 }
@@ -199,7 +215,7 @@ div.nav:hover div.DropdownMenu {
 
 }
 ::-webkit-scrollbar-thumb:hover {
-    background-color: lightgray;
+    background-color: darkgrey;
 }
 /*End*/
 
@@ -314,4 +330,52 @@ div.Agents:hover a {
 div.Agents:hover {
     box-shadow: 0px 0px 10px 3px gray;
 }
+
+/*MAP*/
+div.mapContainer {
+    border-top: 2px red solid;
+    background: url(Assets/bg/Ascent_Map.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: auto;
+    height: 350px;
+}
+
+div.mapContent {
+    text-align: left;
+    background-color: green;
+    display: inline-block;
+    min-width: 100px;
+    min-height: 100px;
+}
+
+/*Footers*/
+footer {
+    width: auto;
+    height: auto;
+    background-color: #000;
+    margin-top: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;    
+    color: #fff;
+}
+
+footer h1, h2, h3, h4, h5 {
+    font-size: 15px !important;
+    color: inherit;
+}
+
+footer a {
+    font-size: 12px !important;
+    color: inherit;
+    display: block;
+    margin: 5px 5px 10px 5px;
+}
+
+footer .container {
+    margin: 10px 50px 25px 50px;  
+
+}
+
 
