--- a/Styles.css
+++ b/Styles.css
@@ -412,3 +412,16 @@ footer .container {
     font-family: Valo;
     font-size: 2em;
 }
+
+/*Agent Content*/
+.agentContent {
+    display: none;
+    position: fixed;
+    width: 80%;
+    height: 80%;
+    right: 10%;
+    bottom: 10%;
+    z-index: 3;
+    background-color: gray;
+    text-align: center;
+}
