--- a/Styles.css
+++ b/Styles.css
@@ -415,7 +415,7 @@ footer .container {
 
 /*Agent Content*/
 .agentContent {
-    display: none;
+    display: block;
     position: fixed;
     width: 80%;
     height: 80%;
@@ -424,4 +424,17 @@ footer .container {
     z-index: 3;
     background-color: gray;
     text-align: center;
+}
+
+.close {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    border-radius: 0px;
+    border-width: 1px solid #000;
+}
+
+.close:hover {
+    background-color: red;
+    color: white;
 }
