--- a/Styles.css
+++ b/Styles.css
@@ -67,6 +67,25 @@ img.logo {
     height: 80px;
     display: block;
 }
+img.icon {
+    width: 40px;
+    height: 40px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background: #000;
+}
+
+img.agent {
+    width: 196px;
+    height: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+img.agent:hover {
+    border: 1px solid #000
+}
 
 img.logo.homepage {
     position: relative;
