--- a/Styles.css
+++ b/Styles.css
@@ -83,7 +83,7 @@ img.agent {
     margin-right: auto;
 }
 img.agent:hover {
-    border: 1px solid #000
+    border: 1px solid #000;
 }
 
 img.logo.homepage {
@@ -434,15 +434,16 @@ footer .container {
 
 /*Agent Content*/
 .agentContent {
-    display: block;
+    display: none;
     position: fixed;
     width: 80%;
     height: 80%;
     right: 10%;
     bottom: 10%;
     z-index: 3;
-    background-color: gray;
+    background-color: green;
     text-align: center;
+    overflow: auto;
 }
 
 .close {
@@ -456,4 +457,14 @@ footer .container {
 .close:hover {
     background-color: red;
     color: white;
+}
+
+.abilityBase {
+    display:flex; 
+    flex-direction: row; 
+    margin-left: 20px;
+}
+
+.abilityBase div {
+    margin-right: 20px;
 }
