--- a/Styles.css
+++ b/Styles.css
@@ -56,7 +56,7 @@ p {
 }
 
 body p {
-    margin: 40px 20% 40px 20%;
+    margin: 40px 10% 40px 10%;
 }
 /*End*/
 
@@ -259,6 +259,7 @@ div.PN_Content {
 
 .patchNoteBody h2, .patchNoteBody p, .patchNoteBody ul {
     text-align: left;
+    margin: 20px 20% 30px 5%;
 }
 
 .patchNoteBody h2 {
@@ -459,6 +460,17 @@ footer .container {
     color: white;
 }
 
+.agentBase {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.agentBase div.agentIcon {
+    margin: 10px 50px 10px 20px;
+}
+
 .abilityBase {
     display:flex; 
     flex-direction: row; 
@@ -480,3 +492,4 @@ footer .container {
 .abilityBase h2 {
     font-size: 1.25em;
 }
+
